welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value positionFinal
  while (!positionFinal){
          ^SnakeBuggle:16: error: not found: value positionFinale
      fin=positionFinale()
          ^